[package]
name = "glib"
documentation = "https://gtk-rs.org/gtk-rs-core/stable/latest/docs/glib/"
description = "Rust bindings for the GLib library"
readme = "README.md"
keywords = ["glib", "gtk-rs", "gnome", "GUI"]
authors.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
build = "build.rs"

[lib]
name = "glib"

[dependencies]
libc.workspace = true
bitflags.workspace = true
futures-core = { version = "0.3", default-features = false }
futures-task = { version = "0.3", default-features = false }
futures-executor = "0.3"
futures-channel = "0.3"
futures-util = "0.3"
glib-sys.workspace = true
gobject-sys.workspace = true
glib-macros.workspace = true
rs-log = { package = "log", version = "0.4", optional = true }
smallvec = { version = "1.13", features = ["union", "const_generics", "const_new"] }
thiserror.workspace = true
gio-sys = { workspace = true, optional = true }
memchr = "2.7.4"

[dev-dependencies]
tempfile = "3"
gir-format-check.workspace = true
trybuild2 = "1"
criterion = "0.5.1"

[build-dependencies]
system-deps = "7"

[features]
default = ["gio"]
v2_58 = ["glib-sys/v2_58", "gobject-sys/v2_58"]
v2_60 = ["v2_58", "glib-sys/v2_60"]
v2_62 = ["v2_60", "glib-sys/v2_62", "gobject-sys/v2_62"]
v2_64 = ["v2_62", "glib-sys/v2_64"]
v2_66 = ["v2_64", "glib-sys/v2_66", "gobject-sys/v2_66"]
v2_68 = ["v2_66", "glib-sys/v2_68", "gobject-sys/v2_68"]
v2_70 = ["v2_68", "glib-sys/v2_70", "gobject-sys/v2_70"]
v2_72 = ["v2_70", "glib-sys/v2_72", "gobject-sys/v2_72"]
v2_74 = ["v2_72", "glib-sys/v2_74", "gobject-sys/v2_74"]
v2_76 = ["v2_74", "glib-sys/v2_76", "gobject-sys/v2_76"]
v2_78 = ["v2_76", "glib-sys/v2_78", "gobject-sys/v2_78"]
v2_80 = ["v2_78", "glib-sys/v2_80", "gobject-sys/v2_80"]
v2_82 = ["v2_80", "glib-sys/v2_82", "gobject-sys/v2_82"]
log = ["rs-log"]
log_macros = ["log"]
compiletests = []
gio = ["gio-sys"]

[[test]]
name = "subclass_compiletest"
required-features = ["compiletests"]

[[bench]]
name = "gstring"
harness = false

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[package.metadata.system-deps.gobject_2_0]
name = "gobject-2.0"
version = "2.56"

[package.metadata.system-deps.gobject_2_0.v2_58]
version = "2.58"

[package.metadata.system-deps.gobject_2_0.v2_62]
version = "2.62"

[package.metadata.system-deps.gobject_2_0.v2_66]
version = "2.66"

[package.metadata.system-deps.gobject_2_0.v2_68]
version = "2.68"

[package.metadata.system-deps.gobject_2_0.v2_70]
version = "2.70"

[package.metadata.system-deps.gobject_2_0.v2_72]
version = "2.72"

[package.metadata.system-deps.gobject_2_0.v2_74]
version = "2.74"

[package.metadata.system-deps.gobject_2_0.v2_76]
version = "2.76"

[package.metadata.system-deps.gobject_2_0.v2_78]
version = "2.77"

[package.metadata.system-deps.gobject_2_0.v2_80]
version = "2.80"

[package.metadata.system-deps.gobject_2_0.v2_82]
version = "2.81"
