[package]
name = "glib"
documentation = "https://gtk-rs.org/gtk-rs-core/stable/latest/docs/glib/"
homepage = "https://gtk-rs.org/"
authors = ["The gtk-rs Project Developers"]
description = "Rust bindings for the GLib library"
readme = "README.md"
version = "0.16.8"
keywords = ["glib", "gtk-rs", "gnome", "GUI"]
repository = "https://github.com/gtk-rs/gtk-rs-core"
license = "MIT"
exclude = [
    "gir-files/*"
]
edition = "2021"
rust-version = "1.63"
build = "build.rs"

[lib]
name = "glib"

[dependencies]
once_cell = "1.0"
libc = "0.2"
bitflags = "1.0"
futures-core = { version = "0.3", default-features = false }
futures-task = { version = "0.3", default-features = false }
futures-executor = "0.3"
futures-channel = "0.3"
futures-util = "0.3"
ffi = { version = "0.16", package = "glib-sys", path = "sys" }
gobject_ffi = { version = "0.16", package = "gobject-sys", path = "gobject-sys" }
glib-macros = { version = "0.16", path = "../glib-macros" }
rs-log = { package = "log", version = "0.4", optional = true }
smallvec = "1.0"
thiserror = "1"
gio_ffi = { version = "0.16", package = "gio-sys", path = "../gio/sys", optional = true }

[dev-dependencies]
tempfile = "3"
gir-format-check = "^0.1"
trybuild2 = "1"

[build-dependencies]
system-deps = "6"

[features]
default = ["gio"]
v2_58 = ["ffi/v2_58", "gobject_ffi/v2_58"]
v2_60 = ["v2_58", "ffi/v2_60"]
v2_62 = ["v2_60", "ffi/v2_62", "gobject_ffi/v2_62"]
v2_64 = ["v2_62", "ffi/v2_64"]
v2_66 = ["v2_64", "ffi/v2_66", "gobject_ffi/v2_66"]
v2_68 = ["v2_66", "ffi/v2_68", "gobject_ffi/v2_68"]
v2_70 = ["v2_68", "ffi/v2_70", "gobject_ffi/v2_70"]
v2_72 = ["v2_70", "ffi/v2_72", "gobject_ffi/v2_72"]
v2_74 = ["v2_72", "ffi/v2_74", "gobject_ffi/v2_74"]
log = ["rs-log"]
log_macros = ["log"]
dox = ["ffi/dox", "gobject_ffi/dox", "log_macros"]
compiletests = []
gio = ["gio_ffi"]

[package.metadata.docs.rs]
features = ["dox"]

[package.metadata.system-deps.gobject_2_0]
name = "gobject-2.0"
version = "2.56"

[package.metadata.system-deps.gobject_2_0.v2_58]
version = "2.58"

[package.metadata.system-deps.gobject_2_0.v2_62]
version = "2.62"

[package.metadata.system-deps.gobject_2_0.v2_66]
version = "2.66"

[package.metadata.system-deps.gobject_2_0.v2_68]
version = "2.68"

[package.metadata.system-deps.gobject_2_0.v2_70]
version = "2.70"

[package.metadata.system-deps.gobject_2_0.v2_72]
version = "2.72"

[package.metadata.system-deps.gobject_2_0.v2_74]
version = "2.73"

[[test]]
name = "subclass_compiletest"
required-features = ["compiletests"]
